--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.9.6",
     "sonner": "^2.0.7",
@@ -40,6 +41,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-dropzone": "^4.2.2",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-import-resolver-typescript": "^4.4.4",
