--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-query": "^5.90.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.555.0",
     "next-themes": "^0.4.6",
